2008-07-28  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* eye,ones,zeros: semantic has changed to follow Matlab rules.
	eye_new, ones_new, zeros_new are the same. eye_deprecated, 
	ones_deprecated, zeros_deprecated follow old rules.
	

2008-07-18  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* GetActions added and improvement in GList GSlist management 
	in gtk2/codegen. 
	
2008-05-02  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* clear, clearglobal without arguments added for 
	clearing all the variables of the current or global frame.
	
2008-05-01  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* *.sci: changes ones, zeros, eye to xxx_deprecated or 
	xxx_new in sci, sce and tst files. 
	
2008-04-11  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* macros/miscellaneous/bdiv_sp_m.sci: add a first
	version for backslash with sparse matrix.

2008-04-07  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* macros/miscellaneous/derivative.sci: add derivative
	function with its help page.
	* src/lapack/lapack.c: replace dgbcon and zgbcon with
	nsp_dgbcon and nsp_zgbcon (same calling sequence). They
	are faster but certainly less robust.

2008-04-03  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/libumfpack/umfpack.c add rcond method 
	(nsp_umfpack_dlacon, nsp_umfpack_zlacon) for
	umfpack objects.

2008-03-30  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* src/type-test/codegen: 
	generation of code for full_copy of objects 
	which are by-reference objects. 
	
2008-03-25  Jean-Philippe Chancelier  <jpc@cermics.enpc.fr>

	* src/lapack/lapack.c: add the symmmetric and positive 
	definite symmetric cases to bdiv. 
	* src/lapack/lapack-IN.c: add interface for solve 
	which uses the different bdiv functions. man added 
		
2008-03-25  Pincon Bruno  <bruno.pincon@iecn.u-nancy.fr>

	* src/lapack/lapack.c (nsp_mat_bdiv_banded): 
	add the banded case for bdiv. This comes with
	some utilities to detect lower and upper matrix