@@ -65,6 +65,7 @@ arrays of \emph{double}.
 \item \verb+A.concatd[B]+ \verb+A = [A;B]+
 \item \verb+A.perm_elem[p,q[,dim]]+ permute p and q: elements
   (default or dim=0), rows (dim=1) or columns (dim=2).
+\item \verb+A.set_diag[B [,k]]+ sets the \verb+k+-th diagonal of matrix \verb+A+ to \verb+B+.
 \end{itemize}
 
 \itemdesc{Extraction, insertion, deletion}
