@@ -33,6 +33,7 @@ Each entry of the matrix is an (univariate) polynomial.
 \item \verb+A.concatr[B]+ \verb+A = [A,B]+
 \item \verb+A.concatd[B]+ \verb+A = [A;B]+
 \item \verb+A.perm_elem[p,q,dim]+ permute values, rows (\verb+dim=1+) or columns (\verb+dim=2+).
+\item \verb+A.set_diag[B [,k]]+ sets the \verb+k+-th diagonal of matrix \verb+A+ to \verb+B+.
 \end{itemize}
 
 \itemdesc{Extraction, insertion, deletion}
